--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,12 @@
     "bcrypt": "^3.0.7",
     "graphql": "^14.5.8",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "sails": "^1.2.3",
     "sails-hook-orm": "^2.1.1",
     "sails-hook-sockets": "^2.0.0",
     "sails-postgresql": "^1.0.2",
+    "slugify": "^1.3.6",
     "validator": "^12.1.0"
   },
   "devDependencies": {
@@ -20,7 +22,7 @@
     "nodemon": "^2.0.2"
   },
   "scripts": {
-    "dev": "nodemon app.js",
+    "dev": "nodemon -L app.js",
     "start": "NODE_ENV=production node app.js",
     "test": "npm run lint && npm run custom-tests && echo 'Done.'",
     "lint": "./node_modules/eslint/bin/eslint.js . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
