--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "start": "NODE_ENV=production node app.js",
     "test": "npm run lint && npm run custom-tests && echo 'Done.'",
     "lint": "./node_modules/eslint/bin/eslint.js . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
-    "custom-tests": "echo \"(No other custom tests yet.)\" && echo"
+    "custom-tests": "echo \"(No other custom tests yet.)\" && echo",
+    "generate-docs": "graphdoc -f"
   },
   "main": "app.js",
   "repository": {
@@ -44,5 +45,9 @@
       "views/*",
       "assets/*"
     ]
+  },
+  "graphdoc": {
+    "endpoint": "http://localhost:1337",
+    "output": "./docs/schema"
   }
 }
